--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div data-mode="purple" id="purple-mode" class="theme-dot"></div>
 					</div>
 
-					<p id="settings-note">*Theme settings will be saved for<br>your next vist</p>
+					<p id="settings-note">*Theme settings will be saved for<br>your next visit</p>
 				</div>
 
 				<div class="right-column">
