--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile_pic" src="images/ic-4703.jpg">
+					<img id="profile_pic" src="images/IMG-20191227-WA0021-01.jpeg">
 					<h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
 
 					<div id="theme-options-wrapper">
